--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@
 @use 'sections/navbar';
 @use 'sections/hero';
 @use 'sections/services';
+@use 'sections/whyChoose';
+@use 'sections/counter';
 
 
 
