--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -49,6 +49,15 @@
             font-size: 12px;
         }
 
+        svg{
+            width: 100%;
+            height: 100%;
+            
+            path{
+                transition: 0.3s ease;
+
+            }
+        }
         
         &:after{
             content: '';
@@ -68,6 +77,13 @@
 
             &:after{
                 opacity: 1;
+            }
+
+            svg{
+                path{
+                    fill: $primary;
+
+                }
             }
         }
     }
