--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @use 'sections/whyChoose';
 @use 'sections/counter';
 @use 'sections/ourwork';
+@use 'sections/ourtestimonials';
 @use 'sections/footer';
 
 
