--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -7,14 +7,13 @@
     padding-top: $spacer * 5;
     @include media-breakpoint-down(sm){
         padding-bottom: $spacer * 5;
+        justify-content: center !important;
     }
     
     h1{
-        @include media-breakpoint-down(xm){
-            font-size: 45px;
-        }
         @include media-breakpoint-down(sm){
-            font-size: 50px;
+            font-size: 45px;
+            margin-bottom: 20px;
         }
         font-size: 64px;
         font-weight: 700;
@@ -54,6 +53,9 @@
         }
     }
     p{
+        @include media-breakpoint-down(sm){
+            font-size: 14px;
+        }
         margin-bottom: 36px;
     }
 }
@@ -121,7 +123,7 @@
     top: 78%;
     right: 0%;
     transform: translate(0%,-78%);
-    z-index: 1;
+    z-index: 3;
 
     h5{
         transform: rotate(270deg) translateX(-25px);
