--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10793,6 +10793,15 @@ textarea.form-control-lg {
   box-shadow: none;
 }
 
+.navcolor-csoz {
+  background-color: #fff;
+  box-shadow: 0px 0px 20px 0px #c7c0c0;
+}
+
+#navbar {
+  transition: background-color 0.3s ease-in;
+}
+
 .menu li {
   padding-right: 1.625rem !important;
   padding-left: 1.625rem !important;
