--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,5 +1,15 @@
 @use '../custom' as *;
 
+//nav bar color change
+.navcolor-csoz{
+    background-color: #fff;
+    box-shadow: 0px 0px 20px 0px #c7c0c0;
+}
+
+#navbar{
+    transition: background-color 0.3s ease-in;
+}
+
 .menu{
     li{
         padding-right: 1.625rem !important;
