added contact us page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,5 +19,8 @@
 @use 'sections/services_page/_sections';
 @use 'sections/services_page/serviceshero';
 
+//import contact us
+@use 'sections/contactus_page/herosection.scss'
+
 
 
