--- a/assets/css/sections/contactus_page/herosection.css
+++ b/assets/css/sections/contactus_page/herosection.css
@@ -10785,550 +10785,6 @@ textarea.form-control-lg {
   --bs-body-font-family:"Montserrat", sans-serif;
 }
 
-.btn {
-  font-size: 0.875rem;
-}
-
-.btn-primary:focus {
-  box-shadow: none;
-}
-
-.navcolor-csoz {
-  background-color: #fff;
-  box-shadow: 0px 0px 20px 0px #c7c0c0;
-}
-
-#navbar {
-  transition: background-color 0.3s ease-in;
-}
-
-.menu li {
-  padding-right: 1.625rem !important;
-  padding-left: 1.625rem !important;
-}
-.menu li:last-child {
-  padding-right: 0 !important;
-}
-.menu a {
-  padding-top: 0.125rem;
-  padding-bottom: 0.0625rem;
-  transform: color 0.5s ease-in;
-}
-.menu a:hover {
-  color: #E63D30 !important;
-}
-.menu .nav-link.active {
-  position: relative;
-}
-@media (max-width: 991.98px) {
-  .menu .nav-link.active {
-    color: #E63D30 !important;
-  }
-}
-.menu .nav-link.active:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 2px;
-  width: 100%;
-  background-color: #E63D30;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
-}
-@media (max-width: 991.98px) {
-  .menu .nav-link.active:after {
-    display: none;
-  }
-}
-
-.navbar-toggler {
-  padding: 0.25rem;
-  border-color: #27437a !important;
-}
-
-.navbar-toggler-icon {
-  width: 1.5625rem;
-  height: 1.5625rem;
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-.herocol-csoz {
-  padding-top: 5rem;
-}
-@media (max-width: 575.98px) {
-  .herocol-csoz {
-    padding-bottom: 1rem;
-    justify-content: center !important;
-  }
-}
-.herocol-csoz h1 {
-  font-size: 64px;
-  font-weight: 700;
-  color: #E63D30;
-  margin-bottom: 80px;
-}
-@media (max-width: 575.98px) {
-  .herocol-csoz h1 {
-    font-size: 45px;
-    margin-bottom: 20px;
-  }
-}
-.herocol-csoz h1 span {
-  display: inline-block;
-  color: #27437a;
-}
-.herocol-csoz h1 .sptext-csoz {
-  position: relative;
-  color: #C1C8DE;
-  text-shadow: -1px 0 #27437a, 0 1px #27437a, 1px 0 #27437a, 0 -1px #27437a;
-}
-.herocol-csoz h1 .sptext-csoz:before {
-  content: "";
-  position: absolute;
-  bottom: 5%;
-  left: 31%;
-  width: 72%;
-  height: 15px;
-  background-color: #27437a;
-  z-index: -1;
-}
-.herocol-csoz h1 .sptext-csoz:after {
-  content: "";
-  position: absolute;
-  bottom: 8%;
-  right: -1.5%;
-  width: 10px;
-  height: 10px;
-  background-color: #fff;
-}
-.herocol-csoz p {
-  margin-bottom: 36px;
-}
-@media (max-width: 575.98px) {
-  .herocol-csoz p {
-    font-size: 14px;
-  }
-}
-
-.box {
-  padding-top: 5rem;
-  position: relative;
-  flex-basis: 375px;
-  min-height: 600px;
-  max-height: 90vh !important;
-  border-bottom-right-radius: 75px;
-}
-.box img {
-  position: absolute;
-  top: 50%;
-  left: -46%;
-  transform: translate(46%, -50%);
-}
-.box .abimage-csoz {
-  position: absolute;
-  top: 55%;
-  left: -50%;
-  z-index: 1;
-  transform: translate(50%, -45%) scale(1);
-}
-
-.werow-csoz {
-  margin-bottom: 70px;
-}
-@media (max-width: 575.98px) {
-  .werow-csoz {
-    display: none !important;
-  }
-}
-.werow-csoz .coloured-csoz {
-  position: relative;
-  width: 159px;
-  background-color: #E63D30;
-  color: #fff;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  padding-left: 1px;
-  text-align: left;
-}
-.werow-csoz .coloured-csoz:after {
-  content: "";
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  position: absolute;
-  top: 50%;
-  right: 2%;
-  transform: translate(-2%, -50%);
-  border-radius: 50%;
-}
-.werow-csoz h5 {
-  text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
-}
-
-.heroimge-csoz {
-  position: relative;
-}
-
-.scroll-csoz {
-  width: auto;
-  position: absolute;
-  top: 78%;
-  right: 0%;
-  transform: translate(0%, -78%);
-  z-index: 3;
-}
-.scroll-csoz h5 {
-  transform: rotate(270deg) translateX(-25px);
-  font-size: 14px;
-  color: #818181;
-}
-
-.serrow-csoz {
-  margin-bottom: 32px;
-}
-
-.serives-csoz {
-  position: relative;
-  padding-top: 100px !important;
-  padding-bottom: 100px !important;
-}
-@media (max-width: 767.98px) {
-  .serives-csoz .content {
-    width: 100% !important;
-  }
-}
-.serives-csoz .content h1 {
-  font-size: 36px;
-  margin-bottom: 32px;
-}
-.serives-csoz .card-csoz {
-  position: relative;
-  text-align: center;
-  background-color: #fff;
-  padding-top: 60px !important;
-  transition: 0.3s ease-in-out;
-  z-index: 1;
-}
-.serives-csoz .card-csoz .img-co {
-  width: 75px;
-  height: 75px;
-  margin: 0 auto;
-  margin-bottom: 40px;
-}
-.serives-csoz .card-csoz h5 {
-  margin-bottom: 25px;
-  font-size: 18px;
-  font-weight: 700;
-}
-.serives-csoz .card-csoz p {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 25px;
-  color: #484848;
-  margin-bottom: 25px;
-}
-.serives-csoz .card-csoz a {
-  text-decoration: none;
-  font-size: 12px;
-}
-.serives-csoz .card-csoz svg {
-  width: 100%;
-  height: 100%;
-}
-.serives-csoz .card-csoz svg path {
-  transition: 0.3s ease;
-}
-.serives-csoz .card-csoz:after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  height: 10px;
-  width: 100%;
-  background-color: #E63D30;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  opacity: 0;
-  transition: 0.5s ease-in-out;
-}
-.serives-csoz .card-csoz:hover {
-  box-shadow: 0px 5px 17px 0px rgba(0, 0, 0, 0.25);
-}
-.serives-csoz .card-csoz:hover:after {
-  opacity: 1;
-}
-.serives-csoz .card-csoz:hover svg path {
-  fill: #E63D30;
-}
-.serives-csoz .section-image-csoz {
-  position: absolute;
-  top: 0;
-  right: 1%;
-}
-
-.services-section {
-  position: relative;
-}
-.services-section:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 45%;
-  height: 60%;
-  background-color: rgba(230, 61, 48, 0.031372549);
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
-}
-@media (max-width: 575.98px) {
-  .services-section:after {
-    display: none;
-  }
-}
-.services-section .botsec-csoz {
-  position: absolute;
-  bottom: -3%;
-  left: 0;
-}
-
-.choose-csoz {
-  padding-top: 100px !important;
-  padding-bottom: 100px !important;
-}
-.choose-csoz h1 {
-  font-size: 36px;
-  margin-bottom: 25px;
-}
-.choose-csoz .whybut-csoz {
-  padding: 16px 12px;
-  border-radius: 0 !important;
-  background-color: #E6E6E6;
-  font-weight: 600;
-  color: #000;
-}
-.choose-csoz .btn-csoz:focus {
-  box-shadow: none;
-}
-
-.counterimg-csoz {
-  top: 0;
-  right: 0;
-}
-
-.worksec-csoz {
-  padding-top: 200px;
-  padding-bottom: 80px;
-}
-.worksec-csoz .content {
-  width: 70%;
-}
-@media (max-width: 991.98px) {
-  .worksec-csoz .content {
-    width: 65%;
-  }
-}
-@media (max-width: 767.98px) {
-  .worksec-csoz .content {
-    width: 100%;
-  }
-}
-.worksec-csoz .imgorwo-csoz {
-  width: 100%;
-  object-fit: cover;
-}
-.worksec-csoz .redbut-csoz {
-  background-color: #C00815;
-}
-
-.imcon-csoz {
-  margin-top: 100px;
-}
-
-.abim-csoz {
-  position: absolute;
-  width: 300px;
-  top: 5%;
-  right: 0;
-  text-align: right;
-}
-@media (max-width: 767.98px) {
-  .abim-csoz {
-    display: none;
-  }
-}
-
-.img-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 0;
-  flex-shrink: 0;
-  width: 200px;
-  height: 200px;
-  padding: 5px;
-  background-color: #716F80;
-  border-radius: 50%;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.carousel-csoz {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-.carousel-csoz .client-content-csoz {
-  z-index: 1;
-}
-.carousel-csoz .client-content-csoz h1 {
-  font-size: 35px;
-  margin-bottom: 50px;
-}
-.carousel-csoz .client-content-csoz p {
-  font-weight: 400;
-  color: #484848;
-  margin-bottom: 40px;
-}
-.carousel-csoz .client-content-csoz .client-data-csoz p {
-  font-size: 14px;
-}
-
-.bacg-csoz {
-  top: 15%;
-  left: 0;
-  z-index: -1;
-}
-
-.csbtn-csoz {
-  background: none;
-  border: none;
-  font-size: 14px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.line {
-  width: 120px;
-  height: 1px;
-  background-color: #E63D30;
-}
-
-.rota-csoz {
-  align-items: flex-start;
-  margin-bottom: 0 !important;
-  position: absolute;
-  top: 50%;
-  transform: translate(45%, -50%) rotate(-90deg);
-}
-
-.letscs-csoz {
-  background-color: #C00815;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: -25px;
-}
-.letscs-csoz h1 {
-  font-weight: 600;
-  margin-bottom: 35px;
-}
-.letscs-csoz h1 span {
-  color: yellow;
-}
-.letscs-csoz p {
-  width: 80%;
-  margin-bottom: 35px;
-}
-
-.footer-csoz {
-  background-image: url("../../assets/img/footer/map.png");
-  background-repeat: no-repeat;
-  background-position: bottom;
-}
-.footer-csoz .cir-csoz {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.footer-csoz .cir-csoz i {
-  color: #221E3A;
-}
-.footer-csoz .footertop-csoz {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2588235294);
-}
-.footer-csoz p, .footer-csoz li, .footer-csoz a {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  .contafakebg-csoz {
-    background: linear-gradient(to right, #3E3E3E 50%, transparent 0%);
-  }
-}
-
-@media (min-width: 768px) {
-  .contafakebgrg-csoz {
-    background: linear-gradient(to left, #3E3E3E 50%, transparent 0%);
-  }
-}
-
-.imgcontainer-csoz {
-  width: 80%;
-}
-
-.boexes3-csoz {
-  top: 3%;
-  left: 0;
-}
-
-.bgimg-csoz {
-  width: 180px;
-}
-@media (max-width: 767.98px) {
-  .bgimg-csoz {
-    display: none;
-  }
-}
-
-.bgtpimg-csoz {
-  top: 0;
-  right: 0;
-  transform: translateY(-40%);
-}
-@media (max-width: 767.98px) {
-  .bgtpimg-csoz {
-    display: none;
-  }
-}
-
-.csservice-csoz {
-  bottom: 0;
-  right: 0;
-  transform: translate(0%, 0%);
-  min-width: 500px;
-  min-height: 350px;
-}
-
-.rehero-csoz {
-  min-height: 75vh;
-}
-@media (max-width: 767.98px) {
-  .rehero-csoz {
-    width: 100% !important;
-  }
-}
-.rehero-csoz h3 {
-  font-size: 30px;
-}
-
 .bgback-csoz {
   background: url("../../../assets/img/contact_page/bg.png") no-repeat right center;
 }
@@ -11399,4 +10855,4 @@ textarea.form-control-lg {
   position: absolute;
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=herosection.css.map */
