--- a/scss/sections/_letscus.scss
+++ b/scss/sections/_letscus.scss
@@ -21,7 +21,7 @@
         margin-bottom: 35px;
         
         span{
-            color: yellow;
+            color: #F6AE2D;
         }
     }
     p{
@@ -29,4 +29,7 @@
         margin-bottom: 35px;
 
     }
+}
+.imgla-csoz{
+    background: #fff url('../../assets/img/thumbsup.png') no-repeat bottom left;
 }
