fixed some responsice problems

--- a/scss/sections/portfolio_page/_tabsbar.scss
+++ b/scss/sections/portfolio_page/_tabsbar.scss
@@ -1,5 +1,8 @@
 @use '../../custom' as *;
 
 .tablink-csoz{
+    @include media-breakpoint-down(md){
+        text-align: left;
+    }
     color: $altlight;
 }
