--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10997,6 +10997,12 @@ textarea.form-control-lg {
   padding-top: 100px !important;
   padding-bottom: 100px !important;
 }
+@media (max-width: 575.98px) {
+  .serives-csoz {
+    padding-top: 50px !important;
+    padding-bottom: 50px !important;
+  }
+}
 @media (max-width: 767.98px) {
   .serives-csoz .content {
     width: 100% !important;
@@ -11105,11 +11111,16 @@ textarea.form-control-lg {
   margin-bottom: 25px;
 }
 .choose-csoz .whybut-csoz {
-  padding: 16px 12px;
+  padding: 16px 6px;
   border-radius: 0 !important;
   background-color: #E6E6E6;
   font-weight: 600;
   color: #000;
+}
+@media (max-width: 575.98px) {
+  .choose-csoz .whybut-csoz {
+    font-size: 14px;
+  }
 }
 .choose-csoz .btn-csoz:focus {
   box-shadow: none;
@@ -11123,6 +11134,12 @@ textarea.form-control-lg {
 .worksec-csoz {
   padding-top: 200px;
   padding-bottom: 80px;
+}
+@media (max-width: 767.98px) {
+  .worksec-csoz {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 .worksec-csoz .content {
   width: 70%;
@@ -11147,6 +11164,11 @@ textarea.form-control-lg {
 
 .imcon-csoz {
   margin-top: 100px;
+}
+@media (max-width: 575.98px) {
+  .imcon-csoz {
+    margin-top: 50px;
+  }
 }
 
 .abim-csoz {
@@ -11398,6 +11420,11 @@ textarea.form-control-lg {
 
 .tablink-csoz {
   color: #27437a;
+}
+@media (max-width: 767.98px) {
+  .tablink-csoz {
+    text-align: left;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
