--- a/scss/sections/_ourwork.scss
+++ b/scss/sections/_ourwork.scss
@@ -1,6 +1,10 @@
 @use '../custom' as *;
 
 .worksec-csoz{
+    @include media-breakpoint-down(md){
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
     padding-top: 200px;
     padding-bottom: 80px;
 
@@ -26,6 +30,9 @@
 }
 // image container
 .imcon-csoz{
+    @include media-breakpoint-down(sm){
+        margin-top: 50px;
+    }
     margin-top: 100px;
 }
 
