--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -4,6 +4,10 @@
     margin-bottom: 32px;
 }
 .serives-csoz{
+    @include media-breakpoint-down(sm){
+        padding-top: 50px !important;
+        padding-bottom: 50px !important;
+    }
     position: relative;
     padding-top: 100px !important;
     padding-bottom: 100px !important;
