--- a/scss/sections/_whyChoose.scss
+++ b/scss/sections/_whyChoose.scss
@@ -11,7 +11,10 @@
 
     // tabs buttons
     .whybut-csoz{
-        padding: 16px 12px;
+        @include media-breakpoint-down(sm){
+            font-size: 14px;
+        }
+        padding: 16px 6px;
         border-radius: 0 !important;
         background-color: $altdark;
         font-weight: 600;
