--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -5,6 +5,7 @@
 //hero section column one
 .herocol-csoz{
     padding-top: $spacer * 5;
+    padding-bottom: $spacer;
     @include media-breakpoint-down(sm){
         padding-bottom: $spacer * 1;
         justify-content: center !important;
@@ -53,9 +54,8 @@
         }
     }
     p{
-        @include media-breakpoint-down(sm){
-            font-size: 14px;
-        }
+        font-size: 14px;
+        font-weight: 400;
         margin-bottom: 36px;
     }
 }
