--- a/scss/sections/_ourwork.scss
+++ b/scss/sections/_ourwork.scss
@@ -22,6 +22,13 @@
     .imgorwo-csoz{
         width: 100%;
         object-fit: cover;
+        transition: 0.3s ease;
+
+
+        &:hover{
+            box-shadow: 0px 0px 12px 5px #e2e2e2;
+            transform: scale(1.01);
+        }
     }
     //read more button
     .redbut-csoz{
