--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -31,8 +31,8 @@
         transition: 0.3s ease-in-out;
         z-index: 1;
         .img-co{
-            width: 75px;
-            height: 75px;
+            width: 78px;
+            height: 78px;
             margin: 0 auto;
             margin-bottom: 40px;
         }
@@ -44,13 +44,15 @@
         p{
             font-size: 14px;
             font-weight: 500;
-            line-height: 25px;
+            line-height: 18px;
             color: #484848;
             margin-bottom: 25px;
         }
         a{
             text-decoration: none;
             font-size: 12px;
+            color: #18315B;
+
         }
 
         svg{
@@ -88,6 +90,10 @@
                     fill: $primary;
 
                 }
+            }
+
+            a{
+                color: $primary;
             }
         }
     }
