fixed background image error

--- a/assets/css/sections/contactus_page/herosection.css
+++ b/assets/css/sections/contactus_page/herosection.css
@@ -10786,7 +10786,7 @@ textarea.form-control-lg {
 }
 
 .bgback-csoz {
-  background: url("../../../assets/img/contact_page/bg.png") no-repeat right center;
+  background: url("../../assets/img/contact_page/bg.png") no-repeat right center;
 }
 
 .sla-csoz {
