--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11364,7 +11364,7 @@ textarea.form-control-lg {
 }
 
 .bgback-csoz {
-  background: url("../../../assets/img/contact_page/bg.png") no-repeat right center;
+  background: url("../../assets/img/contact_page/bg.png") no-repeat right center;
 }
 
 .sla-csoz {
