--- a/scss/sections/contactus_page/herosection.scss
+++ b/scss/sections/contactus_page/herosection.scss
@@ -3,7 +3,7 @@
 
 //background image
 .bgback-csoz{
-    background: url('../../../assets/img/contact_page/bg.png') no-repeat right center;
+    background: url('../../assets/img/contact_page/bg.png') no-repeat right center;
 }
 
 //slash
