--- a/scss/sections/services_page/_serviceshero.scss
+++ b/scss/sections/services_page/_serviceshero.scss
@@ -1,8 +1,8 @@
 @use '../../custom' as *;
 
 .rehero-csoz{
-    min-height: 75vh;
-    background: url(../../assets/img/services_page/hero.png) no-repeat right;
+    min-height: 65vh;
+    background: url(../../assets/img/services_page/hero.png) no-repeat right bottom;
     @include media-breakpoint-down(md){
         width: 100% !important;
     }
