--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,8 @@
 @use 'sections/contactus_page/herosection.scss';
 
 //import portfolio
-@use 'sections/portfolio_page/tabsbar'
+@use 'sections/portfolio_page/hero_portfolio';
+@use 'sections/portfolio_page/tabsbar';
 
 
 
