added background image to about

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11438,6 +11438,15 @@ textarea.form-control-lg {
   position: absolute;
 }
 
+.abbg-csoz {
+  background: url(../../../assets/img/about.png) no-repeat right center;
+}
+@media (max-width: 991.98px) {
+  .abbg-csoz {
+    background: none;
+  }
+}
+
 .heroport-csoz {
   background: url(../../../assets/img/portfolio_pages/portfoio_background.png) no-repeat right bottom;
 }
