--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -61,6 +61,32 @@
         font-weight: 400;
         margin-bottom: 36px;
     }
+    button{
+        position: relative;
+
+        &:before{
+            content: '';
+            position: absolute;
+            bottom: -120px;
+            left: -55px;
+            padding: 124px 88px;
+            background: url('../../assets/img/particle1.png') no-repeat left center;
+            z-index: 1;
+            user-select: none;
+            pointer-events: none;
+        }
+        &:after{
+            content: "";
+            position: absolute;
+            bottom: -71px;
+            right: -107px;
+            padding: 124px 88px;
+            background: url('../../assets/img/particle2.png') no-repeat left center;
+            z-index: 1;
+            user-select: none;
+            pointer-events: none;
+        }
+    }
 }
 .box{
     padding-top: $spacer * 5;
